# nvidia-pcm

./: Readme.md  meson.build  meson_options.txt
example/: plat_config_h100.json
include/: cmd_line.hpp  constants.hpp  dbus_accessor.hpp  dbus_types.hpp  log.hpp  meson.build  pcm_main.hpp  platform_actions.hpp  platform_checks.hpp  platform_config.hpp  utils.hpp
src/: dbus_accessor.cpp  log.cpp  meson.build  pcm_main.cpp  platform_actions.cpp  platform_checks.cpp  platform_config.cpp
subprojects/: phosphor-logging.wrap
